apg4b/I/in_1.txt
In function ‘int main()’:
14:13: error: ‘y’ was not declared in this scope
   cout << y << endl;
       ^
